# ArcaneCore

./: .gitignore  ArcaneCore.vcxproj  ArcaneCore.vcxproj.filters  CMakeLists.txt  ChaosCore.vcxproj  ChaosCore.vcxproj.filters  README.md  semver  sigma.py  w_build.bat
Release/ChaosCore.tlog/: CL.read.1.tlog  CL.write.1.tlog  ChaosCore.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/doxygen/: build_docs  config  customdoxygen.css  example_1.css  example_2.css
docs/gliffy/: overview
src/cpp/arcanecore/: __arcanecore.hpp
src/cpp/arcanecore/base/: Exceptions.hpp  Preproc.hpp  Types.hpp
src/cpp/arcanecore/col/: Accessor.cpp  Accessor.hpp  Collator.cpp  Collator.hpp  Reader.cpp  Reader.hpp  TableOfContents.cpp  TableOfContents.hpp  __arcanecollate.hpp  __col.hpp
src/cpp/arcanecore/config/: Document.cpp  Document.hpp  Variant.cpp  Variant.hpp  Visitor.hpp  __config.hpp
src/cpp/arcanecore/crypt/: FNV.cpp  FNV.hpp  SpookyHash.hpp  __crypt.hpp
src/cpp/arcanecore/gfx/: Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorOperations.cpp  __gfx.hpp
src/cpp/arcanecore/gm/: Matrix.hpp  MatrixMath.hpp  MatrixTransformations.inl  Quaternion.hpp  QuaternionMath.hpp  Vector.hpp  Vector.inl  VectorMath.hpp  VectorMathSimd3f.inl  VectorMathSimd4f.inl  VectorSimd.inl  VectorSimd3f.inl  VectorSimd4f.inl  __gm.hpp
src/cpp/arcanecore/graphics_math/: Vec2.hpp  Vec2Operations.hpp  Vec3.hpp  Vec3Operations.hpp  Vec4.hpp  Vec4Operations.hpp  __gm.hpp
src/cpp/arcanecore/io/: __io.hpp
src/cpp/arcanecore/log/: AbstractOutput.cpp  AbstractOutput.hpp  Input.cpp  Input.hpp  LogHandler.cpp  LogHandler.hpp  Profile.hpp  Shared.cpp  Shared.hpp  Stream.cpp  Stream.hpp  Verbosity.hpp  __log.hpp
src/cpp/arcanecore/lx/: Vector.hpp  __lx.hpp
src/cpp/arcanecore/test/: ArcTest.cpp  ArcTest.hpp  ArcTestMain.cpp  ChaosTest.cpp  ChaosTest.hpp  ChaosTestMain.cpp  TestExceptions.hpp  TestLogger.cpp
src/cxx/: __chaoscore.hpp
src/cxx/__dev/: Main.cpp
src/cxx/base/: Preproc.hpp  Types.hpp  __base.hpp
src/cxx/base/string/: UString.cpp  UString.hpp  UTF8String.cpp  UTF8String.hpp  __string.hpp
src/cxx/chaoscore/: __chaoscore.hpp
src/cxx/chaoscore/base/: BaseExceptions.hpp  BaseLiterals.hpp  Exceptions.hpp  Preproc.hpp  Types.hpp
src/cxx/chaoscore/gfx/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  VectorOperations.cpp  VectorOperations.hpp  __gfx.hpp
src/cxx/chaoscore/test/: ChaosTest.cpp  ChaosTest.hpp  ChaosTestMain.cpp  LaunchPad.cpp  LaunchPad.hpp  TestExceptions.hpp  TestLogger.cpp  TestLogger.hpp  TestSuite.cpp  TestSuite.hpp  TestUnit.cpp  TestUnit.hpp  __TestServices.hpp  __test.hpp
src/cxx/test/: LaunchPad.cpp  LaunchPad.hpp
test_logs/: log.xml  log.xml.base.preproc_1445300650151  log.xml.base.preproc_1445300754693
tests/ChaosCore.tlog/: CL.read.1.tlog  CL.write.1.tlog  ChaosCore.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/cpp/: TestsMain.cpp
tests/cpp/base/: Preproc_TestSuite.cpp  Types_TestSuite.cpp
tests/cpp/base/container/: ConstWeakArray_TestSuite.cpp
tests/cpp/base/data/: BitwiseFloat_TestSuite.cpp  ByteOperations_TestSuite.cpp
tests/cpp/base/introspect/: IntrospectOperations_TestSuite.cpp
tests/cpp/base/math/: MathOperations_TestSuite.cpp
tests/cpp/base/str/: StringOperations_TestSuite.cpp  UTF8String_TestSuite.cpp
tests/cpp/col/: Read_TestSuite.cpp  Write_TestSuite.cpp
tests/cpp/config/: Document_TestSuite.cpp  Variant_TestSuite.cpp
tests/cpp/config/visitors/: PathVisitor_TestSuite.cpp  PrimitiveVisitor_TestSuite.cpp  StringVisitor_TestSuite.cpp
tests/cpp/crypt/: FNV_TestSuite.cpp
tests/cpp/crypt/hash/: FNV_TestSuite.cpp  Spooky_TestSuite.cpp
tests/cpp/gfx/: Vec_TestSuite.cpp  Vector2_TestSuite.cpp  Vector3_TestSuite.cpp  Vector4_TestSuite.cpp  VectorOperations_TestSuite.cpp
tests/cpp/gm/: MatrixMath_TestSuite.cpp  Matrix_TestSuite.cpp  QuaternionMath_TestSuite.cpp  Quaternion_TestSuite.cpp  VectorMath_TestSuite.cpp  Vector_TestSuite.cpp
tests/cpp/graphics_math/: Vec2Operations_TestSuite.cpp  Vec2_TestSuite.cpp  Vec3Operations_TestSuite.cpp  Vec3_TestSuite.cpp  Vec4Operations_TestSuite.cpp  Vec4_TestSuite.cpp
tests/cpp/io/format/: FormatOperations_TestSuite.cpp
tests/cpp/io/os/: SysInfo_TestSuite.cpp
tests/cpp/io/sys/: FileHandle_TestSuite.cpp  FileReader_TestSuite.cpp  FileSystemOperations_TestSuite.cpp  Path_TestSuite.cpp
tests/cpp/log/: Log_TestSuite.cpp
tests/cxx/: TestLaunchPad.cpp  TestsMain.cpp
tests/cxx/base/: PreProc_TestSuite.cpp  Preproc_TestSuite.cpp  Types_TestSuite.cpp
tests/cxx/base/data/: BitwiseFloat_TestSuite.cpp  ByteOperations_TestSuite.cpp  ByteUtil_TestSuite.cpp
tests/cxx/base/introspect/: IntrospectOperations_TestSuite.cpp
tests/cxx/base/math/: MathOperations_TestSuite.cpp  MathUtil_TestSuite.cpp
tests/cxx/base/str/: StringOperations_TestSuite.cpp  UTF8String_TestSuite.cpp  UnicodeOperations_TestSuite.cpp  UnicodeUtil_TestSuite.cpp
tests/cxx/base/uni/: UTF8String_TestSuite.cpp  UnicodeOperations_TestSuite.cpp
tests/cxx/gfx/: Vector2_TestSuite.cpp  Vector3_TestSuite.cpp  Vector4_TestSuite.cpp  VectorOperations_TestSuite.cpp
tests/cxx/io/file/: FileUtil_TestSuite.cpp  Path_TestSuite.cpp
tests/cxx/io/format/: FormatOperations_TestSuite.cpp
tests/cxx/io/sys/: FileHandle_TestSuite.cpp  FileReader_TestSuite.cpp  FileSystemOperations_TestSuite.cpp  Path_TestSuite.cpp
tests/cxx/test_suites/base/: PreProc_TestSuite.cpp  PreProc_TestSuite.hpp
tests/data/col/: file_1.txt  file_2.txt
tests/data/col/output/: read_test.arccol.0  read_test.arccol.1  read_test.arccol.2  read_test.arccol.3  read_test.arccol_toc  read_test_2.arccol.0
tests/data/file_system/: broken_link  rəmzi링크  symlink
tests/data/file_system/test_dir/: broken_link  dir_symlink  symlink
tests/util/: destroy_file_system_objects.py  destroy_file_system_objects.sh  generate_file_system_objects.py  generate_file_system_objects.sh
tools/: mem_check.bash  valgrind.supp  w_build.bat
(+190 files in other folders)
